--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
 </head>
 <body>
     <fieldset style="background-color: rgb(9, 21, 133); color: aliceblue;">
-        <label for="User name"><b><h4>User name</h4></b></label>
-        First name: <br> <input type="text" name="First name" placeholder="First name"> <br>
-        Last name: <br> <input type="text" name="last name" placeholder="last name"> <br><br>
+       <form action="">
+        <label for="User name">User name</label><br>
+        <input type="text" name="User name" placeholder="User name"><br><br>
+        <label for="First name">First name</label><br>
+        <input type="text" name="First name" placeholder="First name"> <br><br>
+        <label for="Last name">Last name</label>
+         <br> <input type="text" name="last name" placeholder="last name"> <br><br>
          <label for="Password"><b>Password</b></label><br>
-         <input type="Password" name="Password" placeholder="Password"><br>
+         <input type="Password" name="Password" placeholder="Password"><br><br>
          <label for="email"><b>email</b></label><br>
          <input type="email" name="email" placeholder="email"><br><br>
          <button><b>Sign up</b></button>
-            </fieldset>
-    
-
-</body></html>
+        </form>    
+        </fieldset>
+</body>
+</html>
